Archive2/fb/5123a2b460760f/output
g++ (GCC) 5.2.0
Copyright (C) 2015 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp: In instantiation of 'constexpr auto make_string(const char (&)[S]) [with long unsigned int S = 6ul]':
main.cpp:28:43:   required from here
main.cpp:22:29: error: 's' is not a constant expression
     return StringType<s[0]>();
                             ^
main.cpp:22:29: note: in template argument for type 'char' 
main.cpp: In function 'int main()':
main.cpp:28:43: error: 'constexpr const void s' has incomplete type
     constexpr auto s = make_string("hello");
                                           ^
